--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,11 @@ code {
 	padding: 0;
 	margin: 0;
 }
+
+.card.right>div {
+	border-right: white 1px solid;
+}
+
+.left-side {
+	grid-column: span 1/2
+}
