--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ code {
 	justify-content: space-evenly;
 	align-items: center;
 	margin-top: 50px;
+	background-image: url("https://previews.123rf.com/images/prapann/prapann1802/prapann180200055/94966218-rough-white-paper-texture-background.jpg")
 }
 
 .card {
@@ -44,10 +45,38 @@ code {
 	margin: 0;
 }
 
+.card.right {}
+
 .card.right>div {
 	border-right: white 1px solid;
 }
 
 .left-side {
-	grid-column: span 1/2
+	grid-column: 1;
+	padding: 10px !important;
+}
+
+.right-side {
+	grid-column: 2/3;
+	padding: 10px !important;
+}
+
+.player-box {
+	position: relative;
+}
+
+.player-name {
+	/* transition: v   isibility 0s linear 0s, opacity 400ms; */
+	position: absolute;
+	left: 0;
+	top: 330px;
+	background: rgba(0, 0, 0, 0.5);
+	width: 100%;
+	height: 75px;
+	align-items: center;
+	justify-content: center;
+	z-index: 2;
+	display: flex;
+	font-size: 30px;
+	color: white;
 }
