--- a/src/index.css
+++ b/src/index.css
@@ -30,53 +30,37 @@
     	background-image: url("https://previews.123rf.com/images/prapann/prapann1802/prapann180200055/94966218-rough-white-paper-texture-background.jpg")
     }
 
-    .card {
+    .baseballcard {
     	width: 300px;
-    	height: 400px;
+    	height: 450px;
+    	background-color: #fff;
     }
 
     .image-card .card-image {
     	margin: 0;
     	width: 100%;
+    	height: auto;
     }
 
-    .SimpleCard-left-5 div {
-    	padding: 0;
+    .baseballcard .text-card {
     	margin: 0;
-    }
-
-    .card.right {}
-
-    .card.right>div {
-    	border-right: white 1px solid;
-    }
-
-    .left-side {
-    	grid-column: 1;
-    	padding: 10px !important;
-    }
-
-    .right-side {
-    	grid-column: 2/3;
-    	padding: 10px !important;
-    }
-
-    .player-box {
-    	position: relative;
-    }
-
-    .player-name {
-    	/* transition: v   isibility 0s linear 0s, opacity 400ms; */
-    	position: absolute;
-    	left: 0;
-    	top: 330px;
-    	background: rgba(0, 0, 0, 0.5);
     	width: 100%;
-    	height: 75px;
-    	align-items: center;
-    	justify-content: center;
-    	z-index: 2;
-    	display: flex;
-    	font-size: 30px;
-    	color: white;
+    	height: 100%;
+    }
+
+    .baseballcard table {
+    	margin: 0;
+    	width: 100%;
+    	height: 100%;
+    	border: 1px solid black;
+    }
+
+    .baseballcard td, .baseballcard th {
+    	border: 1px solid #ddd;
+    	padding: 8px;
+    	text-align: center;
+    }
+
+    tr:nth-child(even) {
+    	background-color: #f2f2f2;
     }
