--- a/src/index.css
+++ b/src/index.css
@@ -36,10 +36,37 @@
     	background-color: #fff;
     }
 
+    .baseballcard.image-card {
+    	width: 300px;
+    	height: 450px;
+    	background-image: url("https://imgc.allpostersimages.com/img/print/u-g-Q104W810.jpg?w=550&h=550&p=0");
+    	margin-top: 10px;
+    }
+
+    .baseballcard .image-container {
+    	flex-direction: column;
+    	align-items: center;
+    	margin-top: 10px;
+    	display: flex;
+    	position: relative;
+    }
+
     .image-card .card-image {
     	margin: 0;
-    	width: 100%;
+    	width: 95%;
     	height: auto;
+    }
+
+    .image-card .player-name {
+    	display: flex;
+    	justify-content: center;
+    	align-items: center;
+    	background-color: #0489CA;
+    	position: absolute;
+    	bottom: 0;
+    	width: 100%;
+    	height: 50px;
+    	font-family: 'Libre Franklin', sans-serif;
     }
 
     .baseballcard .text-card {
@@ -57,7 +84,7 @@
 
     .baseballcard td, .baseballcard th {
     	border: 1px solid #ddd;
-    	padding: 8px;
+    	/* padding: 4  px; */
     	text-align: center;
     }
 
