--- a/src/index.css
+++ b/src/index.css
@@ -43,17 +43,25 @@
     	margin-top: 10px;
     }
 
+    .baseballcard .image-card {
+    	display: flex;
+    	justify-content: center;
+    }
+
     .baseballcard .image-container {
     	flex-direction: column;
     	align-items: center;
+    	width: 95%;
     	margin-top: 10px;
     	display: flex;
     	position: relative;
+    	color: #fff;
+    	font-size: 20px;
     }
 
     .image-card .card-image {
     	margin: 0;
-    	width: 95%;
+    	width: 100%;
     	height: auto;
     }
 
