--- a/src/index.css
+++ b/src/index.css
@@ -66,14 +66,15 @@
     	font-size: 50px;
     }
 
-    .team-font.mlb {
-    	color: #b20000;
+    .mlb-container {
+    	position: absolute;
     	left: initial;
-    	top: initial;
     	right: 6px;
-    	font-size: 25px;
     	z-index: 100;
-    	top: 382px;
+    }
+
+    .mlb {
+    	max-width: 30px;
     }
 
     .image-card .card-image {
@@ -82,7 +83,7 @@
     	height: auto;
     }
 
-    .image-card .player-name {
+    .image-card .player-name-container {
     	display: flex;
     	justify-content: center;
     	align-items: center;
@@ -92,6 +93,10 @@
     	width: 100%;
     	height: 50px;
     	font-family: 'Libre Franklin', sans-serif;
+    }
+
+    .player-name {
+    	position: relative;
     }
 
     .baseballcard .text-card {
@@ -115,4 +120,48 @@
 
     tr:nth-child(even) {
     	background-color: #f2f2f2;
+    }
+
+    @media (max-width: 700px) and (min-width:600px) {
+    	.image-card {
+    		margin-top: 10%;
+    	}
+
+    	.player-name-container {
+    		justify-content: initial !important;
+    	}
+
+    	.player-name {
+    		padding-left: 10px;
+    	}
+    }
+
+    @media (max-width: 599px) and (min-width: 499px) {
+    	.image-card {
+    		margin-top: 25%;
+    	}
+
+    	.player-name-container {
+    		justify-content: initial !important;
+    	}
+
+    	.player-name {
+    		padding-left: 10px;
+    		font-size: 15px;
+    	}
+    }
+
+    @media (max-width: 498px) {
+    	.image-card {
+    		margin-top: 50%;
+    	}
+
+    	.player-name-container {
+    		justify-content: initial !important;
+    	}
+
+    	.player-name {
+    		padding-left: 5px;
+    		font-size: 15px;
+    	}
     }
